--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         <!-- card-1 -->
         <div class=" card  bg-base-100 rounded-none border-b border-r">
             <figure class="px-10 pt-10">
-              <img src="/images/business.png" alt="Shoes" class="" />
+              <img src="./images/business.png" alt="Shoes" class="" />
             </figure>
             <div class="card-body items-center text-center">
-              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Business Law!</h2>
+              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Business Law</h2>
               <p class="text-base font-normal text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
               <div class="card-actions my-8">
@@ -153,10 +153,10 @@
                   <!-- card-2 -->
         <div class="card  bg-base-100 rounded-none border-b border-r  ">
             <figure class="px-10 pt-10">
-              <img src="/images/criminal.png" alt="Shoes" class="" />
+              <img src="./images/criminal.png" alt="Shoes" class="" />
             </figure>
             <div class="card-body items-center text-center">
-              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Business Law!</h2>
+              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Criminal Law</h2>
               <p class="text-base font-normal text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
               <div class="card-actions my-8">
@@ -168,10 +168,10 @@
                   <!-- card-3 -->
         <div class="card rounded-none border-b bg-base-100 ">
             <figure class="px-10 pt-10">
-              <img src="/images/business.png" alt="Shoes" class="" />
+              <img src="./images/child.png" alt="Shoes" class="" />
             </figure>
             <div class="card-body items-center text-center">
-              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Business Law!</h2>
+              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Child Support</h2>
               <p class="text-base font-normal text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
               <div class="card-actions my-8">
@@ -184,10 +184,10 @@
                   <!-- card-4 -->
         <div class="card rounded-none bg-base-1000 ">
             <figure class="px-10 pt-10">
-              <img src="/images/child.png" alt="Shoes" class="" />
+              <img src="./images/education.png" alt="Shoes" class="" />
             </figure>
             <div class="card-body items-center text-center">
-              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Business Law!</h2>
+              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Education Law</h2>
               <p class="text-base font-normal text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
               <div class="card-actions my-8">
@@ -200,11 +200,13 @@
                   <!-- card-5 -->
         <div class="card rounded-none border-l bg-base-100 ">
             <figure class="px-10 pt-10">
-              <img src="/images/business.png" alt="Shoes" class="" />
+              <img src="./images/divorce.png" alt="Shoes" class="" />
             </figure>
             <div class="card-body items-center text-center">
-              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Business Law!</h2>
-              <p class="text-base font-normal text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Divorce Law</h2>
+              <p class="text-base font-normal text-gray-400">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+            </p>
 
               <div class="card-actions my-8">
                 <button class="btn text-white  bg-[#B68C5A] rounded-full border-none"><i class="fa-solid fa-circle-arrow-right"></i></button>
@@ -217,11 +219,14 @@
                   <!-- card-6 -->
         <div class="card rounded-none border-l bg-base-100 ">
             <figure class="px-10 pt-10">
-              <img src="/images/business.png" alt="Shoes" class="" />
+              <img src="./images/business.png" alt="Shoes" class="" />
             </figure>
             <div class="card-body items-center text-center">
-              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Business Law!</h2>
-              <p class="text-base font-normal text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+              <h2 class=" garamond text-3xl font-extrabold text-gray-500">Tax Law</h2>
+              <p class="text-base font-normal text-gray-400">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+
+              </p>
 
               <div class="card-actions my-8">
                 <button class="btn text-white  bg-[#B68C5A] rounded-full border-none"><i class="fa-solid fa-circle-arrow-right"></i></button>
