--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
           <a class="link link-hover">Privacy policy</a> 
           <a class="link link-hover">Cookie policy</a>
           <div class="join w-16">
-            <input class="input input-bordered join-item" placeholder="Email Address"/>
+            <input class="input w-32 input-bordered join-item" placeholder="Email Address"/>
             <button class="btn join-item border-none bg-[#B68C5A] text-white "><i class="fa-solid fa-square-up-right"></i></button>
           </div>
         </div>
